fix crud header z-index

--- a/assets/back/styles/base/crud.scss
+++ b/assets/back/styles/base/crud.scss
@@ -12,7 +12,6 @@
     }
 }
 
-
 .crud-fixed-head {
     background-color: #FFF;
     position: sticky;
@@ -21,6 +20,7 @@
     display: flex;
     justify-content: space-between;
     padding: 1.5rem;
+    z-index: 99;
 
     .lateral-crud-icon-path {
         display: flex;
